--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,6 @@ winit = "0.30.11"
 wgpu = "25.0.2"
 pollster = "0.4.0"
 gilrs = "0.11.0"
+nokhwa = { version = "0.10", features = ["input-msmf", "input-v4l", "input-avfoundation"] }
+image = "0.25.6"
 
